<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="22dp"
    android:background="#FAF1E6">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textColor="#064420"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/old_password_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/old_password"
        android:textColorHint="#064420"
        android:padding="7dp"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:background="#FDFAF6"
            android:textColor="#064420"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:padding="7dp"
        app:passwordToggleEnabled="true"
        android:textColorHint="#064420"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textColor="#064420"
            android:layout_height="wrap_content"
            android:background="#FDFAF6"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/update_password"
        android:textColor="#064420"
        android:backgroundTint="#E4EFE7"

        android:layout_gravity="center_horizontal"
        android:id="@+id/update_password_btn"/>

</LinearLayout>