<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    android:padding="20dp"
    android:background="#FAF1E6">

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#064420"
        android:textSize="35sp" />

    <ImageView
        android:layout_width="500dp"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:layout_above="@id/password_til"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"

        android:src="@drawable/pic_main_screen" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColorHint="#064420"
        android:id="@+id/email_til">
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:background="#FDFAF6"
            android:id="@+id/registerEmail_et"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp"
            android:layout_centerInParent="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/email_til"
        android:textColorHint="#064420"
        android:id="@+id/password_til"
        app:passwordToggleEnabled="true">
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:background="#FDFAF6"
            android:id="@+id/registerPassword_et"
            android:inputType="textPassword"
            android:layout_centerInParent="true"
            android:layout_below="@id/registerEmail_et"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_til"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/login"
        android:backgroundTint="#E4EFE7"

        android:textColor="#064420"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forget_password_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:layout_marginVertical="10dp"
        android:padding="15dp"
        android:text="@string/forget_your_password_press_here"
        android:textAlignment="center"
        android:textColor="#064420"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/register_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="15dp"
        android:padding="25dp"
        android:text="@string/don_t_have_an_account_press_here"
        android:textAlignment="center"
        android:textColor="#064420"
        android:textSize="16sp" />
</RelativeLayout>