<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="3dp"
    app:cardElevation="2dp"
    android:backgroundTint="#FDFAF6"
    app:contentPadding="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <androidx.cardview.widget.CardView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/profilePic_notification_cardView"
            android:layout_marginEnd="7dp"
            app:cardCornerRadius="40dp">

            <ImageView
                android:layout_height="70dp"
                android:layout_width="match_parent"
                android:id="@+id/profilePic_notification_IV"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_profile_default"/>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="#064420"
                android:textStyle="bold"
                android:textSize="18sp"
                android:id="@+id/name_notification_TV"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                android:textColor="#064420"
                android:id="@+id/notification_TV"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="#064420"
                android:alpha="0.5"
                android:id="@+id/notification_time_TV"/>



        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>