<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddPostActivity"
    android:background="#FAF1E6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recipe_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_name"
            android:textColorHint="#064420"
            android:padding="7dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FDFAF6"
                android:background="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recipe_Ingredients_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingredients"
            android:textColorHint="#064420"
            android:padding="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#BB8760"
                android:backgroundTint="#FDFAF6"
                android:background="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recipe_Instructions_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/instructions"
            android:textColorHint="#064420"
            android:padding="7dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:backgroundTint="#FDFAF6" />
        </com.google.android.material.textfield.TextInputLayout>
        
        <ImageView
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="15dp"
            android:padding="7dp"
            android:src="@drawable/camera_image"
            android:id="@+id/recipe_iv"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/upload"
            android:textStyle="bold"
            android:textColor="#064420"
            android:backgroundTint="#E4EFE7"
            android:layout_marginVertical="5dp"
            android:id="@+id/upload_btn"/>
    </LinearLayout>
</ScrollView>